# my_geant4_project

./: README.md
B1_v3/: exampleB1.cc  run2.mac  vis.mac
B1_v3/include/: DetectorConstruction.hh  EventAction.hh  RunAction.hh  TrackerHit.hh  TrackerSD.hh
B1_v3/plots/: myAna.py
B1_v3/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackerHit.cc  TrackerSD.cc
B1_v3/toy_hgcal/: Hits.C  Hits.h  Makefile  examine.cpp  myAna.py
B1_v3/toy_hgcal/toolbox/: MetaData.py  plot_utils.py
B2a/: vis.mac
B2a/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
ExDay1/: CMakeLists.txt  vis.mac  yourMainApplication.cc
ExDay1/include/: YourActionInitialization.hh  YourDetectorConstruction.hh  YourPrimaryGeneratorAction.hh
ExDay1/src/: YourActionInitialization.cc  YourDetectorConstruction.cc  YourPrimaryGeneratorAction.cc
ExDay3/: CMakeLists.txt  run-score.mac  run1.mac  vis.mac  yourMainApplication.cc
ExDay3/include/: ._YourEventAction.hh  YourActionInitialization.hh  YourDetectorConstruction.hh  YourEventAction.hh  YourPrimaryGeneratorAction.hh  YourSteppingAction.hh
ExDay3/src/: YourActionInitialization.cc  YourDetectorConstruction.cc  YourEventAction.cc  YourPrimaryGeneratorAction.cc  YourSteppingAction.cc
